Fixed figure.snip1321 span; px to vw; for better readability in small screen devices

--- a/assets/css/web_style.css
+++ b/assets/css/web_style.css
@@ -582,7 +582,7 @@ figure.snip1321 h4 {
   color: #232323;
 }
 figure.snip1321 span {
-    font-size: 14px;
+    font-size: 1vw;
     font-style: italic;
     display: block;
     color: #7a7a7a;
